fix:make userimage responsive and prevent overflow

--- a/styles.css
+++ b/styles.css
@@ -204,9 +204,15 @@ body {
     box-shadow: rgba(0, 0, 0, 0.9) 0px 5px 15px;
   }
 }
+.user-img-parent{
+  max-width: 300px;
+  max-height: 300px;
+  min-width: 0;
+  overflow: hidden;
+}
 .user-img {
   min-width: 0;
-  
+  object-fit: cover;
   animation: filterAnimation 5s ease-in 1s infinite;
 }
 @keyframes filterAnimation {
@@ -225,6 +231,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  min-width: 0;
   transform: translate(-8px, 10px);
   animation: linearAnimation 5s ease-in 1s infinite;
 }
@@ -245,6 +252,7 @@ body {
   left: 0;
   transform: translate(25px, -50px);
   animation: circleIconAnimation 5s ease-in 1s infinite;
+  min-width: 0;
 }
 
 @keyframes circleIconAnimation {
@@ -266,6 +274,7 @@ body {
   top: 0;
   transform: translate(10px, -18px);
   animation: plusIconAnimation 5s ease-in 1s infinite;
+  min-width: 0;
 }
 
 @keyframes plusIconAnimation {
@@ -286,6 +295,7 @@ body {
   top: 0;
   transform: translate(-5px, -34px);
   animation: rotateAnimation 2.5s ease-in 1s infinite;
+  min-width: 0;
 }
 @keyframes rotateAnimation {
   0% {
@@ -305,6 +315,7 @@ body {
   position: absolute;
   bottom: -43px;
   right: -10px;
+  min-width: 0;
   /* transform: translate(-60px, -34px); */
   animation: dotsAnimation 2.5s ease-in 1s infinite;
 }
